k8s/NetflixFrontend/deployment.yaml
# netflix-fe k8s yaml for deployment
# 1. netflix-fe k8s yaml for deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netflixfe-deployment
  labels:
    app: netflixfe
spec:
  replicas: 2
  selector:
    matchLabels:
      app: netflixfe
  template:
    metadata:
      labels:
        app: netflixfe
    spec:
      containers:
        - name: netflix-frontend
          image: barrotem/netflixfe:github-wf-deploy-20
